se agrego el home

--- a/assets/css/articulos.css
+++ b/assets/css/articulos.css
@@ -83,3 +83,15 @@ main {
     text-decoration: none;
 }
 
+.btn-inicio{
+    background-color: #FFF;
+    color: #111725;
+    border-radius: 5px;
+}
+.btn-inicio:hover{
+    background-color: #888888;
+}
+.btn-signup:hover{
+    background-color: #FFF;
+    color: #111725;
+}
