--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,7 +22,7 @@
     width: 70px;
     height: 70px;
     line-height: 70px;
-    background: #fc5356;
+    background: #343a40;
     color: #ffffff;
     text-align: center;
     border-radius: 50%;
@@ -33,7 +33,8 @@
     line-height: 70px;
   }
   .feature-box-1 h5 {
-    color: #20247b;
+   
+    color: #000;
     font-weight: 600;
   }
   .feature-box-1 p {
@@ -48,7 +49,7 @@
     right: 0;
     border-radius: 10px;
     width: 0;
-    background: #20247b;
+    background: #888888;
     z-index: -1;
     -moz-transition: ease all 0.35s;
     -o-transition: ease all 0.35s;
@@ -80,10 +81,309 @@
   }
   .section-title h2 {
       font-weight: 700;
-      color: #20247b;
+      color: #111725; 
+    
       font-size: 45px;
       margin: 0 0 15px;
-      border-left: 5px solid #fc5356;
+      border-left: 5px solid #888;
       padding-left: 15px;
   }
-  
+  *{
+    font-family: 'Manrope';
+    margin: 0;
+    padding:0;
+}
+body{
+    background-color: #e5e5f7;
+    opacity: 0.8;
+    background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+    background-size: 20px 20px;
+    background-position: 0 0,10px 10px;
+}
+.section-padding{
+    padding: 70px 0;
+}
+#header {
+    background-color: #343a40; 
+    color: white;
+}
+
+.navbar-brand {
+    font-size: 1.5rem;
+    color: white;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    color: white;
+    padding: 0.5rem 1rem;
+}
+
+.navbar {
+    background-color: #292A2E; 
+    color: white; 
+}
+.btn-inicio {
+    background-color:#292A2E; 
+    color: white;
+    border: none; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    transition-duration: 0.4s;
+    cursor: pointer; 
+    border-radius: 12px; 
+
+}
+
+.btn-inicio:hover {
+    background-color: #111725; 
+    color: white; 
+}
+
+
+.nav-link {
+    color: white; 
+}
+
+.nav-link:hover {
+    color: #ddd; 
+}
+
+@media (max-width: 991.98px) {
+    .nav__toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        justify-content: flex-start;
+    }
+}
+.navbar-container{
+    background-color: #111725;
+    color: #FFF;
+}
+.btn-navbar{
+    background: #292A2E;
+    color: #FFF;
+    border: 1px solid #FFF;
+    border-radius: 5px;
+}
+.carousel-item{
+    height: 80vh;
+    min-height: 300px;
+}
+.card:hover{
+    transform: translateY(-10px);
+}
+.carousel-caption{
+    bottom: 200px;
+    z-index: 2;
+    margin-top: 200px;
+}
+.carousel-caption h5{
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.carousel-caption p{
+    width: 60%;
+    margin: auto;
+    font-size: 18px;
+    line-height: 1.9;
+    color: #FFF;
+}
+.carousel-inner::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 30,82, 0.327);
+    z-index: 1;
+}
+footer{
+  background-color: #111725;
+}
+.btn-footer{
+  background: #292A2E;
+  color: #FFF;
+  border: 1px solid #FFF;
+  border-radius: 5px;
+}
+@media(max-width : 767px){
+  .carousel-item{
+      height: 70vh;
+  }
+  .w-100{
+      height: 70vh;
+  }
+  .carousel-caption{
+      bottom: 125px;
+  }
+  .carousel-caption h5{
+      font-size: 17px;
+  }
+  .carousel-caption a{
+      padding: 10px 15px ;
+      font-size: 15px;
+  }
+  .carousel-caption p{
+      width: 100%;
+      line-height: 1.5;
+      font-size: 12px;
+  }
+  .about-text{
+      padding-top: 50px;
+  }
+  .card{
+      margin-bottom: 30px ;
+  }
+  .section-padding{
+      padding: 50px 0;
+  }
+}
+
+.quiz {
+  width: 100%;
+  max-width: 600px; /* Ajusta el ancho máximo según lo que prefieras */
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  background-color: #fff;
+}
+
+.question {
+  margin-bottom: 20px;
+}
+
+.question p {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.quiz-options {
+  display: flex;
+  flex-direction: column;
+}
+
+.quiz-options label {
+  display: block;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: background 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.quiz-options label:hover {
+  background: #f0f0f0;
+}
+
+.quiz-options input[type="radio"] {
+  display: none;
+}
+
+.quiz-options input[type="radio"]:checked + label {
+  background-color: #28a745; /* Color verde para la opción seleccionada */
+  color: #fff;
+  border-color: #28a745;
+}
+
+.quiz-options input[type="radio"]:checked + label:hover {
+  background-color: #218838; /* Un tono más oscuro al pasar el cursor */
+  color: #fff;
+}
+
+.btn-submit {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background 0.3s;
+}
+
+.btn-submit:hover {
+  background-color: #0056b3;
+}
+
+#result {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #28a745;
+  display: none;
+  margin-top: 20px;
+}
+.testimonials-section {
+  padding: 60px 0;
+  background-color: #f9f9f9;
+}
+
+.testimonial-item {
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.testimonial-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.testimonial-item p {
+  font-style: italic;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.testimonial-item h5 {
+  font-weight: bold;
+  color: #292A2E;
+}
+.blog-section {
+  padding: 60px 0;
+}
+.blog-post {
+  text-align: center;
+  background: #f9f9f9;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.blog-post:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.blog-post img {
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+.blog-post h5 {
+  font-size: 1.5em;
+  margin-top: 15px;
+}
+.blog-post p {
+  color: #555;
+}
+@media (max-width: 768px) {
+  .feature-box-1, .blog-post, .testimonial-item, .quiz-container {
+      margin-bottom: 20px;
+  }
+}
+
