--- a/client/assets/css/home.css
+++ b/client/assets/css/home.css
@@ -178,9 +178,52 @@ body{
     transform: translateY(-10px);
 }
 .carousel-caption{
-    bottom: 200px;
-    z-index: 2;
-    margin-top: 200px;
+  bottom: 200px;
+  z-index: 2;
+  margin-top: 200px;
+  text-align: center; 
+}
+.carousel-caption > .btn-inicio {
+  margin-top: 10px;
+  max-height: 35px;
+}
+.carousel-inner{
+  margin-top: 60px;
+}
+.btn-inicio {
+  background-color:#FFF; 
+  color: #111725;
+  border: none; 
+  text-align: center; 
+  text-decoration: none; 
+  display: inline-block; 
+  font-size: 16px; 
+  transition-duration: 0.4s;
+  cursor: pointer; 
+  border-radius: 5px; 
+
+}
+.btn-inicio > a {
+  
+  color: #111725;
+  cursor: pointer; 
+}
+.btn-inicio > a:hover { 
+  color: #FFF; 
+  cursor: pointer; 
+}
+
+
+
+main{
+  height: 100vh;
+}
+.btn-inicio:hover {
+  background-color: #888; 
+  color: #FFF; 
+  cursor: pointer;
+  border: 1px solid #FFF;
+  text-align: center;
 }
 .carousel-caption h5{
     font-size: 20px;
@@ -245,84 +288,10 @@ footer{
       padding: 50px 0;
   }
 }
-
-.quiz {
-  width: 100%;
-  max-width: 600px; /* Ajusta el ancho máximo según lo que prefieras */
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  background-color: #fff;
+.btn-footer:hover{
+  background-color: #888888;
 }
 
-.question {
-  margin-bottom: 20px;
-}
-
-.question p {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-.quiz-options {
-  display: flex;
-  flex-direction: column;
-}
-
-.quiz-options label {
-  display: block;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  cursor: pointer;
-  transition: background 0.3s, color 0.3s, border-color 0.3s;
-}
-
-.quiz-options label:hover {
-  background: #f0f0f0;
-}
-
-.quiz-options input[type="radio"] {
-  display: none;
-}
-
-.quiz-options input[type="radio"]:checked + label {
-  background-color: #28a745; /* Color verde para la opción seleccionada */
-  color: #fff;
-  border-color: #28a745;
-}
-
-.quiz-options input[type="radio"]:checked + label:hover {
-  background-color: #218838; /* Un tono más oscuro al pasar el cursor */
-  color: #fff;
-}
-
-.btn-submit {
-  display: block;
-  width: 100%;
-  padding: 15px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background 0.3s;
-}
-
-.btn-submit:hover {
-  background-color: #0056b3;
-}
-
-#result {
-  text-align: center;
-  font-size: 1.2rem;
-  color: #28a745;
-  display: none;
-  margin-top: 20px;
-}
 .testimonials-section {
   padding: 60px 0;
   background-color: #f9f9f9;
