--- a/client/assets/css/landingPage.css
+++ b/client/assets/css/landingPage.css
@@ -5,7 +5,6 @@
 }
 body{
     background-color: #e5e5f7;
-    opacity: 0.8;
     background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
@@ -34,8 +33,8 @@ body{
     color: white; 
 }
 .btn-inicio {
-    background-color:#292A2E; 
-    color: white;
+    background-color:#FFF; 
+    color: #111725;
     border: none; 
     text-align: center; 
     text-decoration: none; 
@@ -43,16 +42,117 @@ body{
     font-size: 16px; 
     transition-duration: 0.4s;
     cursor: pointer; 
-    border-radius: 12px; 
+    border-radius: 5px; 
 
 }
-
+main{
+    height: 100vh;
+}
 .btn-inicio:hover {
-    background-color: #111725; 
-    color: white; 
+    background-color: #888; 
+    color: #FFF; 
+    cursor: pointer;
+    border: 1px solid #FFF;
 }
+.btn-signup:hover{
+    background-color: #343a40; 
+    color: #FFF; 
+    cursor: pointer;
+    border: 1px solid #FFF;
+}
+.quiz {
+    width: 100%;
+    max-width: 600px; /* Ajusta el ancho máximo según lo que prefieras */
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    margin: 20px;
+  }
+  
+  .question {
+    margin-bottom: 20px;
+  }
+  
+  .question p {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+  
+  .quiz-options {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .quiz-options label {
+    display: block;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background 0.3s, color 0.3s, border-color 0.3s;
+    display: block; /* Asegura que las opciones de radio estén en una línea nueva */
+    margin-bottom: 10px; /* Espacio entre las opciones */
+    
+  }
+  
+  .quiz-options label:hover {
+    background: #f0f0f0;
+  }
+  
+  .quiz-options input[type="radio"] {
+    display: none;
+  }
+  
+  .quiz-options input[type="radio"]:checked + label {
+    background-color: #28a745; /* Color verde para la opción seleccionada */
+    color: #fff;
+    border-color: #28a745;
+  }
+  
+  .quiz-options input[type="radio"]:checked + label:hover {
+    background-color: #218838; /* Un tono más oscuro al pasar el cursor */
+    color: #fff;
+  }
+  
+  .btn-submit {
+    display: block;
+    width: 15%;
+    justify-content: center;
+    padding: 10px;
+    background-color: #111725;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: 0.3s;
+    max-height: 50px;
+    text-align: center
+    
+  }
 
-
+  
+  .btn-submit:hover {
+    background-color: #343a40;
+    border: 1p solid #FFF;
+    color: #FFF;
+  }
+  
+  #result {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #28a745;
+    display: none;
+    margin-top: 20px;
+  }
+.quiz-container{
+    max-width: 600px; 
+    margin: 0 auto; 
+    padding: 0 15px;
+    margin-bottom: 50px
+}
 .nav-link {
     color: white; 
 }
@@ -90,8 +190,10 @@ body{
 .carousel-caption{
     bottom: 200px;
     z-index: 2;
-    margin-top: 200px;
+    text-align: center;
+
 }
+
 .carousel-caption h5{
     font-size: 20px;
     text-transform: uppercase;
@@ -114,7 +216,13 @@ body{
     background: rgba(0, 30,82, 0.327);
     z-index: 1;
 }
-
+.carousel-caption > .btn-inicio {
+    margin-top: 10px;
+    max-height: 35px;
+}
+.carousel-inner{
+    margin-top: 65px;
+}
 .portafolio{
     box-shadow: #4F6F52;
 
@@ -141,6 +249,9 @@ footer{
     color: #FFF;
     border: 1px solid #FFF;
     border-radius: 5px;
+}
+.btn-footer:hover{
+    background-color: #888888;
 }
 @media(max-width : 767px){
     .carousel-item{
