--- a/articulos/articulo.css
+++ b/articulos/articulo.css
@@ -8,7 +8,20 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
+.btn-crear {
+    background-color:  #292A2E;
+    color: white; 
+    border-radius: 6px;
+    padding: 8px 15px; 
+    font-size: 16px;
+    border: none;
+}
 
+.btn-crear:hover {
+    background-color: #888; 
+    transform: translateY(-2px);
+    border: none;
+}
 .article-title {
     font-size: 2rem;
     font-weight: 700;
