--- a/client/assets/css/recetas.css
+++ b/client/assets/css/recetas.css
@@ -1,8 +1,8 @@
 
 .card-img {
   width: 100%;
-  height: 100%; /* Asegura que la imagen ocupe todo el espacio disponible */
-  object-fit: cover; /* Mantiene la proporción de la imagen y rellena el área */
+  height: 100%; 
+  object-fit: cover; 
 }
 .card:hover{
     transform: translateY(-10px);
@@ -26,6 +26,21 @@ body{
 }
 main{
     height: 100vh;
+}
+.btn-crear {
+    background-color:  #292A2E;
+    color: white; 
+    border-radius: 6px;
+    padding: 8px 15px; 
+    font-size: 16px;
+    transition: transform 0.3s;
+    border: none; 
+}
+
+.btn-crear:hover {
+    background-color: #888; 
+    transform: translateY(-2px);
+    border: none;
 }
 .section-padding{
     padding: 70px 0;
