--- a/client/assets/css/login.css
+++ b/client/assets/css/login.css
@@ -4,4 +4,74 @@ body{
     background-image:  radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
+    
+}
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
+
+
+.card {
+    max-width: 900px;
+}
+
+.card img {
+    object-fit: cover;
+}
+
+.card .col-md-6 {
+    padding: 0;
+}
+
+.form-label {
+    color: #495057;
+    font-weight: 600;
+}
+
+.form-control {
+    padding: 0.75rem;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.form-control:focus {
+    background-color: #e9ecef;
+}
+
+.btn-inicio {
+    background-color: #495057;
+    border-color: #333;
+    padding: 0.75rem;
+    font-size: 1rem;
+    font-weight: 600;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    color: #FFF;
+}
+span a {
+    color: #495057;
+    text-decoration: underline;
+    font-weight: 600;
+}
+.btn-inicio:hover {
+    background-color: #888;
+    border-color: #333;
+    transform: translateY(-2px);
+    color: #FFF;
+}
+
+h3 {
+    color: #333;
+    font-weight: 700;
+}
+
+.animate__animated.animate__fadeIn {
+    animation-duration: 1.5s;
+}
+
+.animate__animated.animate__fadeInLeft {
+    animation-duration: 1.5s;
+}
+
+.animate__animated.animate__fadeInRight {
+    animation-duration: 1.5s;
 }
