mejora de alineacion del navbar

--- a/client/assets/css/formulariostyle.css
+++ b/client/assets/css/formulariostyle.css
@@ -26,6 +26,10 @@ body{
     color: white;
     padding: 0.5rem 1rem;
 }
+.nav-logo img {
+    width: 100px;
+    height: auto; 
+}
 
 .navbar {
     background-color: #292A2E; 
