--- a/client/assets/css/articulos.css
+++ b/client/assets/css/articulos.css
@@ -93,13 +93,24 @@ body {
 
 .nav-link {
     font-size: 1.2rem;
-    color: white;
     padding: 0.5rem 1rem;
+    color: #fff;
+    text-align: center;
 }
-
+.navbar-nav {
+    flex-direction: row;
+  }
+  
+.nav-item {
+    padding: 0 10px;
+  }
+  .nav-logo img {
+    width: 100px;
+    height: auto; 
+  }
 .navbar {
     background-color: #292A2E;
-    color: white;
+    color: #FFF;
 }
 
 footer {
