--- a/client/assets/css/home.css
+++ b/client/assets/css/home.css
@@ -104,8 +104,8 @@ body{
     padding: 70px 0;
 }
 #header {
-    background-color: #343a40; 
-    color: white;
+  background-color: #292A2E; 
+  color: white;
 }
 
 .navbar-brand {
@@ -115,14 +115,28 @@ body{
 
 .nav-link {
     font-size: 1.2rem;
-    color: white;
     padding: 0.5rem 1rem;
+    color: #fff;
+    text-align: center;
 }
+.navbar-nav {
+  flex-direction: row;
+}
+
+.nav-item {
+  padding: 0 10px;
+}
+
 
 .navbar {
     background-color: #292A2E; 
-    color: white; 
+    color: #fff; 
 }
+.nav-logo img {
+  width: 100px;
+  height: auto; 
+}
+
 .btn-inicio {
     background-color:#292A2E; 
     color: white;
