--- a/client/assets/css/landingPage.css
+++ b/client/assets/css/landingPage.css
@@ -24,13 +24,22 @@ body{
 
 .nav-link {
     font-size: 1.2rem;
-    color: white;
     padding: 0.5rem 1rem;
+    color: #fff;
+    text-align: center;
 }
+.navbar-nav {
+  flex-direction: row;
+}
+
+.nav-item {
+  padding: 0 10px;
+}
+
 
 .navbar {
     background-color: #292A2E; 
-    color: white; 
+    color: #fff; 
 }
 .btn-inicio {
     background-color:#FFF; 
