--- a/nuevo client/src/style.css
+++ b/nuevo client/src/style.css
@@ -3,31 +3,56 @@
 @tailwind utilities;
 
 
-
 .react-calendar {
-    width: 350px;
-    max-width: 100%;
-    background: red; /* Fondo personalizado */
-    border-radius: 10px;
+  width: 100%;
+  max-width: 400px;
+  background: #f9fafb; 
+  border-radius: 10px;
+   padding: 20px;
+}
+
+.react-calendar__navigation button {
+  color: #4b5563; /* Color del texto de los botones de navegación */
+ 
+  font-weight: bold; /* Negrita */
+  transition: color 0.3s ease-in-out;
+}
+
+.react-calendar__navigation button:hover {
+  color: #1f2937; /* Oscurecer al pasar el ratón */
 }
 
 .react-calendar__month-view__days__day {
-    padding: 10px;
-    color: #333; /* Color del texto */
-    border-radius: 5px;
-    cursor: pointer;
+  padding: 10px;
+  color: #374151; /* Info del texto */
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
 .react-calendar__month-view__days__day--neighboringMonth {
-    color: #999; /* Color de los días del mes vecino */
+  color: #9ca3af; /* Color de los días del mes vecino */
 }
 
 .react-calendar__tile {
-    background: red; /* Fondo de las celdas */
-    border: 1px solid #eaeaea; /* Borde de las celdas */
+  background: #f1f5f9; /* Fondo de las celdas */
+  border: 1px solid #e5e7eb; 
+  transition: transform 0.2s ease-in-out, background-color 0.3s ease;
+}
+
+.react-calendar__tile:hover {
+  background-color: #e0f2fe; /* Color de fondo al pasar el ratón */
+  transform: scale(1.05); 
 }
 
 .react-calendar__tile--active {
-    background: #4a90e2; /* Fondo del día activo */
-    color: white; /* Color del texto en el día activo */
+  background: #60a5fa; /* Fondo del día activo */
+  color: white; }
+
+.react-calendar__tile--now {
+  background: #fef9c3; /* Fondo del día actual */
+}
+
+.react-calendar__tile--active:hover {
+  background: #3b82f6; /* Fondo más oscuro al pasar el ratón por el día activo */
 }
