--- a/nuevo client/src/style.css
+++ b/nuevo client/src/style.css
@@ -2,18 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .react-calendar {
   width: 100%;
   max-width: 400px;
-  background: #f9fafb; 
+  background: red;
   border-radius: 10px;
-   padding: 20px;
+  padding: 20px;
 }
 
 .react-calendar__navigation button {
   color: #4b5563; /* Color del texto de los botones de navegación */
- 
+
   font-weight: bold; /* Negrita */
   transition: color 0.3s ease-in-out;
 }
@@ -36,18 +35,19 @@
 
 .react-calendar__tile {
   background: #f1f5f9; /* Fondo de las celdas */
-  border: 1px solid #e5e7eb; 
+  border: 1px solid #e5e7eb;
   transition: transform 0.2s ease-in-out, background-color 0.3s ease;
 }
 
 .react-calendar__tile:hover {
   background-color: #e0f2fe; /* Color de fondo al pasar el ratón */
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
 
 .react-calendar__tile--active {
   background: #60a5fa; /* Fondo del día activo */
-  color: white; }
+  color: white;
+}
 
 .react-calendar__tile--now {
   background: #fef9c3; /* Fondo del día actual */
@@ -55,4 +55,8 @@
 
 .react-calendar__tile--active:hover {
   background: #3b82f6; /* Fondo más oscuro al pasar el ratón por el día activo */
+}
+.react-calendar__tile.bg-blue-200 {
+  background-color: #4db8ff !important; /* Color de bg-blue-200 */
+  color: white !important; /* Asegura que el texto sea visible */
 }
